# zed-unity-livelink

./: README.md
CustomUnityLivelink/Assets/Avatar/: model.fbx
CustomUnityLivelink/Assets/Background/: Green.mat  NightSky.mat  yellow.mat
CustomUnityLivelink/Assets/Prefab/: CH_01.prefab  MyFusionManager.prefab  Unity_Avatar.prefab  model.prefab  my_CH_01.prefab
CustomUnityLivelink/Assets/Scenes/: Main.unity
CustomUnityLivelink/Assets/Scripts/: MoveCamera.cs
CustomUnityLivelink/Assets/ZEDFusion/: Lighting Settings.lighting
CustomUnityLivelink/ProjectSettings/: ProjectSettings.asset
custom-unity-livelink-fusion/: CMakeLists.txt  README.md
custom-unity-livelink-fusion/src/: LiveLinker.cc  LiveLinker.h  main.cc
custom-unity-livelink-fusion/src/client/: SenderRunner.cc  SenderRunner.h
custom-unity-livelink-fusion/src/config/: ConfigParser.h
custom-unity-livelink-fusion/src/logger/: SkeletonLogger.cc  SkeletonLogger.h
my-unity-livelink-fusion/: CMakeLists.txt  run_build.sh
my-unity-livelink-fusion/etc/: calibration.json  config.json
my-unity-livelink-fusion/src/: LiveLinker.cc  LiveLinker.h
play-generator/: CMakeLists.txt  run_build.sh
play-generator/etc/: config.json  template.json
play-generator/src/: main.cc  play_generator.cc  play_generator.h
play-generator/src/config/: config_parser.cc  config_parser.h
play-generator/src/generator/: generator.cc  generator.h  keypoint.h
play-generator/src/transfer/: PracticalSocket.cc  practical_socket.cc  transfer.h
zed-unity-livelink-fusion/src/: main.cpp
(+80 files in other folders)
